Añadir mis archivos al repositorio

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "billetera_digital",
-    "short_name": "billetera_digital",
+    "name": "namer_app",
+    "short_name": "namer_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
